--- a/code/package.json
+++ b/code/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "babel-runtime": "^6.18.0",
     "bcrypt": "^0.8.7",
+    "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "jquery": "^2.2.4",
     "jquery-validation": "^1.15.1",
@@ -73,6 +74,7 @@
     "react-dom": "^15.3.2",
     "react-komposer": "^1.13.1",
     "react-router": "^3.0.0",
-    "react-router-bootstrap": "^0.23.1"
+    "react-router-bootstrap": "^0.23.1",
+    "stripe": "^4.15.1"
   }
 }
