--- a/code/settings-development.json
+++ b/code/settings-development.json
@@ -1,4 +1,8 @@
 {
-  "public": {},
-  "private": {}
+  "public": {
+    "stripe": "pk_test_Z3eTPy2QmMxh3zx2BPp6LywQ"
+  },
+  "private": {
+    "stripe": "sk_test_lwta3jM01zhED7koJk6vTnhQ"
+  }
 }
