--- a/code/package.json
+++ b/code/package.json
@@ -62,12 +62,13 @@
     }
   },
   "dependencies": {
-    "babel-runtime": "^6.18.0",
+    "babel-runtime": "^6.23.0",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "jquery": "^2.2.4",
     "jquery-validation": "^1.15.1",
+    "moment": "^2.18.1",
     "react": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
     "react-bootstrap": "^0.30.5",
